@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180225"
-#define public MagickPackageReleaseDate "snapshot-20180225"
+#define public MagickPackageVersionAddendum ".020180226"
+#define public MagickPackageReleaseDate "snapshot-20180226"
